--- a/security.html
+++ b/security.html
@@ -40,15 +40,15 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oNylafwA&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=ngOAWLwQ'>Herjavec Group Careers - Tier I - Security Analyst</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on:: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/udemy/0388204d-3530-40cb-83ef-7453e8a935f1'>Udemy - Senior Security Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/udemy/cbb03f4b-1d09-4fc6-b4ec-13e443f7da73'>Udemy - Senior Security and Compliance Analyst</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999692421808--permanent-job-application-security-engineer-with-java-j2ee-accept-visa-candidates'>Bey (Permanent Job) Application Security Engineer with JAVA / J2EE - Accept Visa Candidates | SmartRecruiters</a></h5> 
@@ -63,7 +63,7 @@
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/18040c61-14da-459a-9ee4-ed17d5dccae3'>Shopify - Mobile Applications - Security Engineering Lead</a></h5> 
+<h5><a href='https://jobs.lever.co/shopify/18040c61-14da-459a-9ee4-ed17d5dccae3'>Shopify - Mobile Applications - Security Engineering Lead</a></h5> 
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -112,7 +112,7 @@
 <p>1 day ago ... Job Title: Security Engineer III. Summary of Position: The Security Engineer III will
 , Under general supervision, performs a wide variety of duties in support of?...</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_santeecooper/external/jobDetails.do?functionName=getJobDetail&jobPostId=4641&localeCode=en-us'>Security Analyst III</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_santeecooper/external/jobDetails.do?functionName=getJobDetail&jobPostId=4641&localeCode=en-us'>Security Analyst III</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Position Description Demonstrates in-depth knowledge of corporate IT security 
 initiatives and risk management activities. Utilizes knowledge of industry best?...</p>
@@ -144,7 +144,7 @@ Analyst - TS/SCI required in Ft Belvoir, Virginia. Review all of the job details
 within AbbVie's enterprise-wide information security team, will be responsible for
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GBM1/743999687702856-cloud-security-engineer-aws-'>GBM Cloud Security Engineer (AWS) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GBM1/743999687702856-cloud-security-engineer-aws-'>GBM Cloud Security Engineer (AWS) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -330,7 +330,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/0DF63DE72F'>QuintoAndar - Jobs: Information Security Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/0DF63DE72F'>QuintoAndar - Jobs: Information Security Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Information Security Analyst at QuintoAndar.</p>
 <hr/>
@@ -370,7 +370,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ironnet/job/oFBCafwM'>IronNet Cybersecurity Careers - Senior Software Engineer - Digital Impressions</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ironnet/job/oFBCafwM'>IronNet Cybersecurity Careers - Senior Software Engineer - Digital Impressions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -446,7 +446,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FSRLLC/743999676151820-sr-network-security-engineer'>FSR, LLC. Sr Network Security Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FSRLLC/743999676151820-sr-network-security-engineer'>FSR, LLC. Sr Network Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
